--- a/Coco bongo.html
+++ b/Coco bongo.html
@@ -129,7 +129,7 @@
             <p>includes entrance fee and open bar domestic beverages, package available from Tuesday to Sunday.
             </p>
             <div class="precio">$90</div>
-            <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW
             </a>
         </div>
@@ -140,7 +140,7 @@ ss
             <p>includes entrance and Open bar of the Gold member area NOT INCLUDING SEATS package available from Tuesday to Sunday.
             </p>
             <div class="precio">$125</div>
-            <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW
             </a>
         </div>
@@ -150,7 +150,7 @@ ss
             <h3>FRONT ROW Vip</h3>
             <p> includes entrance to FRONT ROW Vip area, with the best view of the shows, in a preferential area (limited number of people) with 💺 seats, Premium drinks and fast entrance. Tuesday packages available</p>
             <div class="precio">$190</div>
-            <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW
             </a>
         </div>
