--- a/SHOPPING.html
+++ b/SHOPPING.html
@@ -128,7 +128,7 @@
             <h3>1 PAX</h3>
             <p>Immerse yourself in the vibrant culture of the Dominican Republic with a unique shopping experience. Explore local markets and stores where you can find handcrafted souvenirs, traditional Dominican products, and vibrant textiles. Your guide will introduce you to the rich cultural heritage of the island, from locally made cigars to artisan jewelry and tropical spices. Enjoy the opportunity to interact with local artisans and discover the stories behind the crafts. This excursion offers a perfect blend of shopping and culture, allowing you to take home a piece of the Dominican Republic's authentic charm.</p>
             <div class="precio">$FREE</div>
-            <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW
             </a>
         </div>
@@ -138,7 +138,7 @@
             <h3>2 PAX</h3>
             <p>Immerse yourself in the vibrant culture of the Dominican Republic with a unique shopping experience. Explore local markets and stores where you can find handcrafted souvenirs, traditional Dominican products, and vibrant textiles. Your guide will introduce you to the rich cultural heritage of the island, from locally made cigars to artisan jewelry and tropical spices. Enjoy the opportunity to interact with local artisans and discover the stories behind the crafts. This excursion offers a perfect blend of shopping and culture, allowing you to take home a piece of the Dominican Republic's authentic charm.</p>
             <div class="precio">$FREE</div>
-            <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW
             </a>
         </div>
@@ -148,7 +148,7 @@
             <h3>10 PAX</h3>
             <p>Immerse yourself in the vibrant culture of the Dominican Republic with a unique shopping experience. Explore local markets and stores where you can find handcrafted souvenirs, traditional Dominican products, and vibrant textiles. Your guide will introduce you to the rich cultural heritage of the island, from locally made cigars to artisan jewelry and tropical spices. Enjoy the opportunity to interact with local artisans and discover the stories behind the crafts. This excursion offers a perfect blend of shopping and culture, allowing you to take home a piece of the Dominican Republic's authentic charm.</p>
             <div class="precio">$FREE</div>
-            <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW
             </a>
         </div>
