--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ html[lang="es"] {
     </div>
     <div class="platilloos tours">
         <a href="samana Cayo LEVANTADO Y CASCADA EL LIMON FROM PUNTACANA.html">
-            <img src="assets/img/d6b8a9df-cbd0-461a-90b5-f7a9e87c8240.avif" alt="samana Cayo LEVANTADO Y CASCADA EL LIMON FROM PUNTACANA">
+            <img src="assets/img/unspecified-43.jpg" alt="samana Cayo LEVANTADO Y CASCADA EL LIMON FROM PUNTACANA">
         </a>
         <h2><a href="samana Cayo LEVANTADO Y CASCADA EL LIMON FROM PUNTACANA.html">samana Cayo LEVANTADO Y CASCADA EL LIMON FROM PUNTACANA</a></h2>
         <p>Enjoy Samana Cayo LEVANTADO AND EL LIMON WATERFALL FROM PUNTACANA
