--- a/los-haitises.html
+++ b/los-haitises.html
@@ -131,7 +131,7 @@
             <h3>1 PAX</h3>
             <p>Descripción breve del producto. Este es un excelente artículo para todo tipo de situaciones.</p>
             <div class="precio">$150</div>
-            <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW
             </a>
         </div>
@@ -141,7 +141,7 @@
             <h3>2 PAX </h3>
             <p>Este producto es ideal para quienes buscan calidad y durabilidad. Perfecto para tu día a día.</p>
             <div class="precio">$200</div>
-            <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW
             </a>
         </div>
@@ -151,7 +151,7 @@
             <h3>10 PAX</h3>
             <p>Un artículo innovador que no te puede faltar. Perfecto para regalar o para tu propio uso.</p>
             <div class="precio">$120</div>
-            <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW
             </a>
         </div>
