--- a/private-speedboat-excursion-to-saona-island.html
+++ b/private-speedboat-excursion-to-saona-island.html
@@ -125,30 +125,36 @@
     <main>
         <div class="producto-card">
             <img src="assets/img/private1.jpeg" alt="Producto 1">
-            <h3>1 PAX</h3>
-            <p>Descripción breve del producto. Este es un excelente artículo para todo tipo de situaciones.</p>
-            <div class="precio">$150</div>
-            <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <h3>6 TO 10 PAX</h3>
+            <p>Saona Island All-Inclusive + Private Speedboat Excursion
+
+                Enjoy a VIP experience with a private speedboat ride to Saona Island. Relax on the stunning beaches, snorkel in vibrant reefs, and swim in natural pools. Savor an all-inclusive buffet lunch and unlimited drinks. A personalized, unforgettable day in paradise!</p>
+            <div class="precio">$1400</div>
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="assets/img/private2.jpeg" alt="Producto 2">
-            <h3>2 PAX</h3>
-            <p>Este producto es ideal para quienes buscan calidad y durabilidad. Perfecto para tu día a día.</p>
-            <div class="precio">$200</div>
-            <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <h3>11 TO 15 PAX</h3>
+            <p>Saona Island All-Inclusive + Private Speedboat Excursion
+
+                Enjoy a VIP experience with a private speedboat ride to Saona Island. Relax on the stunning beaches, snorkel in vibrant reefs, and swim in natural pools. Savor an all-inclusive buffet lunch and unlimited drinks. A personalized, unforgettable day in paradise!</p>
+            <div class="precio">$1900</div>
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW
             </a>
         </div>
 
         <div class="producto-card">
             <img src="assets/img/private2.jpeg" alt="Producto 3">
-            <h3>10 PAX</h3>
-            <p>Un artículo innovador que no te puede faltar. Perfecto para regalar o para tu propio uso.</p>
-            <div class="precio">$120</div>
-            <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <h3>16 TO 20PAX</h3>
+            <p>Saona Island All-Inclusive + Private Speedboat Excursion
+
+                Enjoy a VIP experience with a private speedboat ride to Saona Island. Relax on the stunning beaches, snorkel in vibrant reefs, and swim in natural pools. Savor an all-inclusive buffet lunch and unlimited drinks. A personalized, unforgettable day in paradise!</p>
+            <div class="precio">$2800</div>
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW
             </a>
         </div>
