--- a/haitises.html
+++ b/haitises.html
@@ -136,7 +136,7 @@
             <h3>2 PAX</h3>
             <p>Descripción breve del producto. Este es un excelente artículo para todo tipo de situaciones.</p>
             <div class="precio">$320</div>
-            <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW
             </a>
         </div>
@@ -146,7 +146,7 @@
             <h3>4 PAX</h3>
             <p>Este producto es ideal para quienes buscan calidad y durabilidad. Perfecto para tu día a día.</p>
             <div class="precio">$640</div>
-            <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%202%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW
             </a>
         </div>
@@ -156,7 +156,7 @@
             <h3>10 PAX</h3>
             <p>Un artículo innovador que no te puede faltar. Perfecto para regalar o para tu propio uso.</p>
             <div class="precio">$3200</div>
-            <a href="https://wa.me/1234567890?text=¡Me%20interesa%20el%20Producto%203%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW
             </a>
         </div>
