--- a/samana Cayo LEVANTADO Y CASCADA EL LIMON FROM PUNTACANA.html
+++ b/samana Cayo LEVANTADO Y CASCADA EL LIMON FROM PUNTACANA.html
@@ -1,3 +1,175 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Catálogo de Producto</title>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+         /* Asegura que el contenido ocupe al menos el 100% de la altura de la ventana */
+         body {
+            font-family: 'Mulish', sans-serif;
+            margin: 0;
+            background-color: #f4f4f4;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            background-image: url('assets/img/samanaisla1.jpg'); /* Imagen de fondo */
+            background-size: cover; /* La imagen cubre toda la pantalla */
+            background-position: center; /* Centra la imagen */
+            background-repeat: no-repeat; /* La imagen no se repite */
+        }
+
+        /* El contenedor principal (header + main) debe ocupar todo el espacio disponible */
+        main {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            padding: 20px;
+            flex-grow: 1; /* Esto asegura que el contenido se expanda para llenar el espacio disponible */
+        }
+
+        /* Estilo del encabezado */
+        header {
+            background-color: #00A8E8;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            position: relative;
+        }
+
+        /* Botón de regreso */
+        .btn-regresar {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            font-size: 1.5rem;
+            background: transparent;
+            border: none;
+            color: white;
+            cursor: pointer;
+        }
+
+        /* Estilo de las tarjetas de productos */
+        .producto-card {
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            width: 300px;
+            margin: 20px;
+            padding: 20px;
+            text-align: center;
+            transition: transform 0.3s ease;
+        }
+
+        .producto-card:hover {
+            transform: translateY(-10px);
+        }
+
+        .producto-card img {
+            width: 100%;
+            border-radius: 8px;
+            height: auto;
+        }
+
+        .producto-card h3 {
+            margin: 15px 0;
+        }
+
+        .producto-card p {
+            color: #777;
+            font-size: 1rem;
+        }
+
+        .producto-card .precio {
+            font-size: 1.2rem;
+            font-weight: bold;
+            margin-top: 10px;
+        }
+
+        .btn-reservar {
+            display: inline-block;
+            padding: 12px 25px;
+            background-color: #25d366; /* Color de WhatsApp */
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            margin-top: 20px;
+            transition: background-color 0.3s;
+        }
+
+        .btn-reservar:hover {
+            background-color: #128c7e;
+        }
+
+        /* Estilo del footer */
+        footer {
+            text-align: center;
+            padding: 15px;
+            background-color: #333;
+            color: white;
+            margin-top: auto; /* Esto asegura que el footer se mantenga abajo */
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <!-- Botón de regresar -->
+        <button class="btn-regresar" onclick="window.history.back();">←</button>
+        <h1>Catálogo de Productos</h1>
+    </header>
+
+    <main>
+        <div class="producto-card">
+            <img src="assets/img/ballenas-jorobadas-samana-01.webp" alt="1 pax">
+            <h3>1 PAX</h3>
+            <p>Whale Watching Week in Samana (Available February 5 - April 3)
+
+                Join us for an unforgettable week of whale watching in Samana during the peak of the whale migration season, available only from February 5 to April 3. Cruise the crystal clear waters of Samana Bay to see these majestic creatures up close. Explore beautiful Cayo Levantado, enjoy snorkeling and indulge in delicious local cuisine. With plenty of relaxation and adventure, this is the perfect blend of nature, excitement and tranquility. Don't miss the opportunity to experience the wonders of whale season.
+                
+                </p>
+            <div class="precio">$90US</div>
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+                BOOKING NOW
+            </a>
+        </div>
+
+        <div class="producto-card">
+            <img src="assets/img/unspecified-43.jpg" alt="2 PAX">
+            <h3>2 Pax</h3>
+            <p>Whale Watching Week in Samana (Available February 5 - April 3)
+
+                Join us for an unforgettable week of whale watching in Samana during the peak of the whale migration season, available only from February 5 to April 3. Cruise the crystal clear waters of Samana Bay to see these majestic creatures up close. Explore beautiful Cayo Levantado, enjoy snorkeling and indulge in delicious local cuisine. With plenty of relaxation and adventure, this is the perfect blend of nature, excitement and tranquility. Don't miss the opportunity to experience the wonders of whale season.
+                </p>
+           
+            <div class="precio">$180US</div>
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+               BOOKING NOW
+            </a>
+        </div>
+
+        <div class="producto-card">
+            <img src="assets/img/ballenas_samana.jpg" alt="10 PAX">
+            <h3>10 pax</h3>
+            <p>Whale Watching Week in Samaná (Available from February 5th to April 3rd)
+
+                Join us for an unforgettable week of whale watching in Samaná during the peak of the whale migration season, available only from February 5th to April 3rd. Enjoy private transportation to and from your hotel, then sail the crystal-clear waters of the Bay of Samaná to witness these majestic creatures up close. Explore the beautiful Cayo Levantado, enjoy snorkeling, and indulge in delicious local cuisine. With plenty of relaxation and adventure, this is the perfect blend of nature, excitement, and tranquility. Don’t miss your chance to experience the wonders of whale season!</p>
+            <div class="precio">$900</div>
+            <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
+                BOOKING NOW
+            </a>
+        </div>
+    </main>
+
+    <footer>
+        <p>© 2024 Mi Tienda Online. Todos los derechos reservados.</p>
+    </footer>
+
+</body>
+</html>
 
 
 
@@ -6,4 +178,4 @@
 
 
 
- <H1>saona-island-excursion-private-boat-from-10-to-60-people-all-incluided</H1>
+
