--- a/HIGUEY CITY TOUR PRIVATE.html
+++ b/HIGUEY CITY TOUR PRIVATE.html
@@ -134,9 +134,9 @@
 
         <div class="producto-card">
             <img src="paginas/higuey3.jpg" alt="Producto 2">
-            <h3>2 PAX </h3>
+            <h3>5 PAX </h3>
             <p>Enjoy a fascinating excursion through the Dominican Republic, starting with a visit to a coffee and cacao plantation. Learn about the cultivation process before heading to a tobacco factory to see how the product is made. Explore a local market for authentic crafts and culture, followed by a tour of an ancient church showcasing the country’s history. End with an optional visit to the beautiful Macao Beach for some relaxation.</p>
-            <div class="precio">$140</div>
+            <div class="precio">$150</div>
             <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW
             </a>
@@ -144,9 +144,9 @@
 
         <div class="producto-card">
             <img src="paginas/higuey4.jpg" alt="Producto 3">
-            <h3>1 PAX PRIVATY</h3>
+            <h3>10 pax</h3>
             <p>Experience a private and personalized excursion through the Dominican Republic, tailored just for you. Start with an exclusive visit to a coffee and cacao plantation, where you’ll learn about the cultivation process firsthand. Then, enjoy a private tour of a tobacco factory, seeing how this traditional product is made. Explore a local market at your own pace, and discover authentic crafts and culture. Visit an ancient church rich in history, before finishing with a relaxing, optional stop at Macao Beach. This customizable journey ensures a truly unique and intimate experience.</p>
-            <div class="precio">$110</div>
+            <div class="precio">$200</div>
             <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" class="btn-reservar" target="_blank">
                 BOOKING NOW
             </a>
