--- a/samana Cayo LEVANTADO Y CASCADA EL LIMON FROM PUNTACANA.html
+++ b/samana Cayo LEVANTADO Y CASCADA EL LIMON FROM PUNTACANA.html
@@ -126,7 +126,7 @@
         <div class="producto-card">
             <img src="assets/img/ballenas-jorobadas-samana-01.webp" alt="1 pax">
             <h3>1 PAX</h3>
-            <p>Whale Watching Week in Samana (Available February 5 - April 3)
+            <p>Whale Watching Week in Samana  (Available from January 20 to March 30)
 
                 Join us for an unforgettable week of whale watching in Samana during the peak of the whale migration season, available only from February 5 to April 3. Cruise the crystal clear waters of Samana Bay to see these majestic creatures up close. Explore beautiful Cayo Levantado, enjoy snorkeling and indulge in delicious local cuisine. With plenty of relaxation and adventure, this is the perfect blend of nature, excitement and tranquility. Don't miss the opportunity to experience the wonders of whale season.
                 
@@ -140,7 +140,7 @@
         <div class="producto-card">
             <img src="assets/img/unspecified-43.jpg" alt="2 PAX">
             <h3>2 Pax</h3>
-            <p>Whale Watching Week in Samana (Available February 5 - April 3)
+            <p>Whale Watching Week in Samana  (Available from January 20 to March 30)
 
                 Join us for an unforgettable week of whale watching in Samana during the peak of the whale migration season, available only from February 5 to April 3. Cruise the crystal clear waters of Samana Bay to see these majestic creatures up close. Explore beautiful Cayo Levantado, enjoy snorkeling and indulge in delicious local cuisine. With plenty of relaxation and adventure, this is the perfect blend of nature, excitement and tranquility. Don't miss the opportunity to experience the wonders of whale season.
                 </p>
@@ -154,7 +154,7 @@
         <div class="producto-card">
             <img src="assets/img/ballenas_samana.jpg" alt="10 PAX">
             <h3>10 pax</h3>
-            <p>Whale Watching Week in Samaná (Available from February 5th to April 3rd)
+            <p>Whale Watching Week in Samaná  (Available from January 20 to March 30)
 
                 Join us for an unforgettable week of whale watching in Samaná during the peak of the whale migration season, available only from February 5th to April 3rd. Enjoy private transportation to and from your hotel, then sail the crystal-clear waters of the Bay of Samaná to witness these majestic creatures up close. Explore the beautiful Cayo Levantado, enjoy snorkeling, and indulge in delicious local cuisine. With plenty of relaxation and adventure, this is the perfect blend of nature, excitement, and tranquility. Don’t miss your chance to experience the wonders of whale season!</p>
             <div class="precio">$900</div>
