--- a/index.html
+++ b/index.html
@@ -303,16 +303,15 @@ html[lang="es"] {
             <img src="assets/img/unspecified-43.jpg" alt="samana Cayo LEVANTADO Y CASCADA EL LIMON FROM PUNTACANA">
         </a>
         <h2><a href="samana Cayo LEVANTADO Y CASCADA EL LIMON FROM PUNTACANA.html">samana Cayo LEVANTADO Y CASCADA EL LIMON FROM PUNTACANA</a></h2>
-        <p>Enjoy Samana Cayo LEVANTADO AND EL LIMON WATERFALL FROM PUNTACANA
-            .</p>
+        <p>Enjoy Samana Cayo LEVANTADO AND EL LIMON WATERFALL FROM PUNTACANA.</p>
     </div>
+    
     <div class="platilloos tours">
         <a href="HIGUEY CITY TOUR PRIVATE.html">
             <img src="assets/img/Basílica-de-Nuestra-Señora-de-la-Altagracia-672x372-1.jpg" alt="isla-catalina-and-snorkel">
         </a>
         <h2><a href="HIGUEY CITY TOUR PRIVATE.html">HIGUEY CITY TOUR PRIVATE</a></h2>
-        <p>Explore Higüey on an exclusive tour 
-            .</p>
+        <p>Explore Higüey on an exclusive tour.</p>
     </div>
     <div class="platilloos tours">
         <a href="Santo Domingo.html">
@@ -336,7 +335,7 @@ html[lang="es"] {
         </a>
         <h2><a href="Hacienda park.html">Hacienda park</a></h2>
         <p>Enjoy Hacienda Park, adventure and nature in one place.
-            .</p>
+            </p>
     </div>
     <div class="platilloos tours">
         <a href="Coco bongo.html">
