--- a/index.html
+++ b/index.html
@@ -299,11 +299,11 @@ html[lang="es"] {
             .</p>
     </div>
     <div class="platilloos tours">
-        <a href="samana Cayo LEVANTADO Y CASCADA EL LIMON FROM PUNTACANA.html">
-            <img src="assets/img/unspecified-43.jpg" alt="samana Cayo LEVANTADO Y CASCADA EL LIMON FROM PUNTACANA">
+        <a href="Samana with whales.html">
+            <img src="assets/img/unspecified-43.jpg" alt="Samana with whales">
         </a>
-        <h2><a href="samana Cayo LEVANTADO Y CASCADA EL LIMON FROM PUNTACANA.html">samana Cayo LEVANTADO Y CASCADA EL LIMON FROM PUNTACANA</a></h2>
-        <p>Enjoy Samana Cayo LEVANTADO AND EL LIMON WATERFALL FROM PUNTACANA.</p>
+        <h2><a href="Samana with whales.html">Samana with whales </a></h2>
+        <p>Samana with whales</p>
     </div>
     
     <div class="platilloos tours">
@@ -475,7 +475,7 @@ html[lang="es"] {
 
    <!-- Botón de reserva -->
 <div style="text-align: center;">
-    <a href="https://wa.me/34612345678?text=Hola%2C%20estoy%20interesado%20en%20reservar%20una%20excursi%C3%B3n%20con%20ustedes.%20%3A" 
+    <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" 
        class="animado"
        style="display: inline-block; padding: 20px 40px; background-color: #d43f3a; color: white; font-size: 20px; font-weight: bold; border-radius: 5px; text-decoration: none; transition: background-color 0.3s ease; margin-top: 30px;">
        Book your tour now
