Inicializando proyecto en Heroku

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ html[lang="es"] {
             <div class="contenido-navegacion contenedor">
                 <div class="logo">
                     <h2 style="white-space: nowrap;">
-                        <span style="color: #FFFFFF;">harmony</span>
+                        <span style="color: #FFFFFF;">Harmony</span>
                         <span style="color: #0033A0;">exc</span>
                         <span style="color: #FFFFFF;">ursi</span>
                         <span style="color: #D50032;">ons </span>
@@ -299,19 +299,20 @@ html[lang="es"] {
             .</p>
     </div>
     <div class="platilloos tours">
-        <a href="Samana with whales.html">
-            <img src="assets/img/unspecified-43.jpg" alt="Samana with whales">
+        <a href="Samanawithwhales.html">
+            <img src="assets/img/unspecified-43.jpg" alt="samana Cayo LEVANTADO Y CASCADA EL LIMON FROM PUNTACANA">
         </a>
-        <h2><a href="Samana with whales.html">Samana with whales </a></h2>
-        <p>Samana with whales</p>
+        <h2><a href="Samanawithwhales.html">Saman with whale</a></h2>
+        <p>Saman with whale
+            .</p>
     </div>
-    
     <div class="platilloos tours">
         <a href="HIGUEY CITY TOUR PRIVATE.html">
             <img src="assets/img/Basílica-de-Nuestra-Señora-de-la-Altagracia-672x372-1.jpg" alt="isla-catalina-and-snorkel">
         </a>
         <h2><a href="HIGUEY CITY TOUR PRIVATE.html">HIGUEY CITY TOUR PRIVATE</a></h2>
-        <p>Explore Higüey on an exclusive tour.</p>
+        <p>Explore Higüey on an exclusive tour 
+            .</p>
     </div>
     <div class="platilloos tours">
         <a href="Santo Domingo.html">
@@ -335,7 +336,7 @@ html[lang="es"] {
         </a>
         <h2><a href="Hacienda park.html">Hacienda park</a></h2>
         <p>Enjoy Hacienda Park, adventure and nature in one place.
-            </p>
+            .</p>
     </div>
     <div class="platilloos tours">
         <a href="Coco bongo.html">
@@ -475,7 +476,7 @@ html[lang="es"] {
 
    <!-- Botón de reserva -->
 <div style="text-align: center;">
-    <a href="https://wa.me/+18092514054?text=¡Me%20interesa%20el%20Producto%201%20y%20quiero%20reservarlo!" 
+    <a href="https://wa.me/34612345678?text=Hola%2C%20estoy%20interesado%20en%20reservar%20una%20excursi%C3%B3n%20con%20ustedes.%20%3A" 
        class="animado"
        style="display: inline-block; padding: 20px 40px; background-color: #d43f3a; color: white; font-size: 20px; font-weight: bold; border-radius: 5px; text-decoration: none; transition: background-color 0.3s ease; margin-top: 30px;">
        Book your tour now
